kubernetes/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: finance
  namespace: finance
spec:
  ingressClassName: nginx
  rules:
    - host: finance.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: finance
                port:
                  number: 80
